PIN-5710: Update openAPI and contracts (Push and pull service) with 429 status code (#179)
